--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://twitter.com/KSumit82" target="_blank"> class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/Sumeet82" target="_blank"> class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/KSumit82" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://github.com/Sumeet82" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
