--- a/index.html
+++ b/index.html
@@ -77,8 +77,21 @@
 										<li><a href="https://github.com/Sumeet82/Portfolio_Project/blob/main/Covid-19%20Project%20(SQL%20Query).sql" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
+
+								<header>
+
+										<h2><a href="https://github.com/Sumeet82/Portfolio_Project/blob/main/Netflix%20Analysis%20Project%20.ipynb" target="_blank" >NETFLIX  ANALYSIS<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/Sumeet82/Portfolio_Project/blob/main/Netflix%20Analysis%20Project%20.ipynb" target="_blank"  class="image fit" ><img src="images/Net_Flix.jpg" alt="" /></a>
+									<p>Netflix Analysis using Python, Numpy Panda, Matplotlib, Textblob.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Sumeet82/Portfolio_Project/blob/main/Netflix%20Analysis%20Project%20.ipynb"  target="_blank" class="button">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
+										
 
 										<h2><a href="https://public.tableau.com/app/profile/sumit.sanjeevkumar/vizzes" target="_blank" >TABLEAU DASHBOARDS<br />
 										</a></h2>
