--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 									</ul>
 								</article>
 
-								<header>
-									
+								<article>
+									<header>
+
 									<h2><a href="https://github.com/Sumeet82/Portfolio_Project/blob/main/Netflix%20Analysis%20Project%20.ipynb" target="_blank" >NETFLIX  ANALYSIS<br />
 									</a></h2>
 								</header>
@@ -93,7 +94,6 @@
 								<article>
 									<header>
 										
-
 										<h2><a href="https://public.tableau.com/app/profile/sumit.sanjeevkumar/vizzes" target="_blank" >TABLEAU DASHBOARDS<br />
 										</a></h2>
 									</header>
